--- a/Endmer/Views/Araclar/Index.cshtml
+++ b/Endmer/Views/Araclar/Index.cshtml
@@ -36,7 +36,7 @@
 
                 <div class="card-body px-0 pt-0 pb-2">
                     <div class="table-responsive p-0">
-                        <table class="table table-hover align-items-center mb-0 table-filter">
+                        <table class="table table-hover align-items-center mb-0">
                             <thead align="center">
                                 <tr>
                                     <th>Resim</th>
@@ -60,7 +60,7 @@
                                     status = "Girilmedi";
                                 }
 
-                                <tbody id="myTable" align="center">
+                                <tbody align="center">
                                     <tr>
                                         <td><img src="@x.RESIM" width="150" /></td>
                                         <td>@x.MARKA</td>
@@ -85,8 +85,6 @@
         </div>
     </div>
 </div>
-
-
 
 
 <script>
