--- a/Endmer/Views/Departmanlar/Index.cshtml
+++ b/Endmer/Views/Departmanlar/Index.cshtml
@@ -21,6 +21,7 @@
                     <div class="col">
                         <div class="float-start ms-3">
                             <a href="/Departmanlar/DepartmanEkle" class="btn btn-info">Yeni Departman Ekle</a>
+                            <a href="/Departmanlar/Yazdir" class="btn btn-secondary"><i class="fa-solid fa-print"></i></a>
                         </div>
 
                         <div class="float-end me-3">
