--- a/Endmer/Views/Konumlar/Index.cshtml
+++ b/Endmer/Views/Konumlar/Index.cshtml
@@ -21,6 +21,7 @@
                     <div class="col">
                         <div class="float-start ms-3">
                             <a href="/Konumlar/KonumEkle" class="btn btn-info">Yeni Konum Ekle</a>
+                            <a href="/Konumlar/Yazdir" class="btn btn-secondary"><i class="fa-solid fa-print"></i></a>
                         </div>
 
                         <div class="float-end me-3">
