--- a/Endmer/Views/Personel/Index.cshtml
+++ b/Endmer/Views/Personel/Index.cshtml
@@ -25,6 +25,7 @@
                     <div class="col">
                         <div class="float-start ms-3">
                             <a href="/Personel/PersonelEkle" class="btn btn-info">Yeni Personel Ekle</a>
+                            <a href="/Personel/Yazdir" class="btn btn-secondary"><i class="fa-solid fa-print"></i></a>
                         </div>
 
                         <div class="float-end me-3">
